# poetry_cookiecutter

./: .gitignore  404.html  LICENSE  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
docs/: getting_started.md  good_practices.md  index.md
docs/features/: black.md  doc.md  poetry.md  pypi.md  test.md
features/actions/: index.html
features/black/: index.html
features/doc/: index.html
features/poetry/: index.html
features/pypi/: index.html
features/style/: index.html
features/test/: index.html
getting_started/: index.html
good_practices/: index.html
hooks/: post_gen_project.py  pre_gen_project.py  pre_gen_project.sh
search/: search_index.json
{{cookiecutter.project_name}}/: LICENSE  README.md  __init__.py  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: ci.yml
{{cookiecutter.project_name}}/docs/: index.md
{{cookiecutter.project_name}}/{{cookiecutter.module_name}}/: __init__.py
