[tool.poetry]
name = "{{cookiecutter.repo_name}}"
version = "0.0.1"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_fullname}} <{{cookiecutter.author_email}}>"]
packages = [
    { include = "{{cookiecutter.repo_name}}" },
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pytest = "^7.1.3"
mkdocs-material = "^8.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

[tool.isort]
profile = "black"
skip_glob = ["*/__init__.py"]
